--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
   "name": "dndenc",
   "version": "1.0.0",
-  "description": "Git and Node",
+  "description": "This is a website for generating D&D 5E combat encounters.",
   "main": "index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "lite": "lite-server",
     "start": "npm run lite",
-    "lite": "lite-server"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/LordFagan/dndenc.git"
   },
-  "author": "",
+  "author": "KC Fagan",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/LordFagan/dndenc/issues"
@@ -20,5 +20,10 @@
   "homepage": "https://github.com/LordFagan/dndenc#readme",
   "devDependencies": {
     "lite-server": "^2.5.4"
+  },
+  "dependencies": {
+    "bootstrap": "^4.5.0",
+    "jquery": "^3.5.1",
+    "popper.js": "^1.16.1"
   }
 }
